samples/_failures_safe/1761532720_194216_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_310252fe.c: In function ‘main’:
./samples/SAFE/__tmp_310252fe.c:156:5: error: expected expression at end of input
  156 |     while (1)
      |     ^~~~~
./samples/SAFE/__tmp_310252fe.c:156:5: error: expected declaration or statement at end of input
